added delete data within df for ratio

--- a/Project/Missing-data.ipynb
+++ b/Project/Missing-data.ipynb
@@ -256,7 +256,8 @@
   },
   {
    "source": [
-    "### d) Représenter graphiquement les données à l’aide de plusieurs nuages de points en deux di- mensions."
+    "### d) Représenter graphiquement les données à l’aide de plusieurs nuages de points en deux dimensions.\n",
+    "L’axe vertical devra correspondre à la consommation (première colonne) et l’axe horizontal de- vra correspondre successivement à toutes les autres variables quantitatives."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -310,21 +311,22 @@
   },
   {
    "source": [
-    "1. une première qui supprimera aléatoirement des données dans une colonne donnée, de façon à ce que le taux de valeurs manquantes pour cette variable devienne égal à une valeur fixée arbitrairement par l’utilisateur"
+    "1. une première qui supprimera aléatoirement des données dans une colonne donnée, de façon à ce que le taux de valeurs manquantes pour cette variable devienne égal à une valeur fixée arbitrairement par l’utilisateur\n",
+    "\n",
+    "Attention : il faut prendre en compte les données qui sont déjà manquantes avant la suppression pour le calcul du taux final de valeurs manquantes."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_random_data(df, column, ratio):\n",
+    "def delete_data_column_at_ratio(df, column, ratio):\n",
     "    '''\n",
     "    retourne un nouveau dataframe avec les données supprimées pour la colonne souhaité au ratio voulue\n",
-    "    une copie profonde est effectuée afin de ne pas perdre le dataframe initial\n",
     "    '''\n",
     "    miss_df = df.isnull().sum()\n",
     "    size = np.shape(df)[0]\n",
@@ -348,21 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Ratio du nombre de données manquantes pour chaque colonne\nmpg             0.399\ncylinders       0.000\ndisplacement    0.000\nhorsepower      0.015\nweight          0.000\nacceleration    0.000\nmodel year      0.000\norigin          0.000\ncar name        0.000\ndtype: float64 \n\nNombre de données manquantes pour chaque colonne\nmpg             162\ncylinders         0\ndisplacement      0\nhorsepower        6\nweight            0\nacceleration      0\nmodel year        0\norigin            0\ncar name          0\ndtype: int64\n"
+      "Ratio du nombre de données manquantes pour chaque colonne\nmpg             0.020\ncylinders       0.000\ndisplacement    0.000\nhorsepower      0.015\nweight          0.399\nacceleration    0.000\nmodel year      0.000\norigin          0.000\ncar name        0.000\ndtype: float64 \n\nNombre de données manquantes pour chaque colonne\nmpg               8\ncylinders         0\ndisplacement      0\nhorsepower        6\nweight          162\nacceleration      0\nmodel year        0\norigin            0\ncar name          0\ndtype: int64\n"
      ]
     }
    ],
    "source": [
-    "# exemple d'utilisation \n",
+    "# Exemple d'utilisation \n",
     "# on supprime des données de la colonne weight de façon a perdre 40% des données\n",
-    "new_df = delete_random_data(df, 0, 0.40)\n",
+    "new_df = delete_data_column_at_ratio(df, 4, 0.40)\n",
     "\n",
     "# on a bien un ratio de 0.40 de données manquantes\n",
     "print('Ratio du nombre de données manquantes pour chaque colonne')\n",
@@ -375,18 +377,112 @@
    ]
   },
   {
+   "source": [
+    "2. une seconde qui supprimera aléatoirement des données dans l’ensemble du dataframe (n’importe quelle colonne peut donc être concernée) de façon à ce que le taux de valeurs manquantes, au total, devienne égal à une valeur fixée arbitrairement par l’utilisateur.\n",
+    "\n",
+    "Attention : il faut prendre en compte les données qui sont déjà manquantes avant la suppression pour le calcul du taux final de valeurs manquantes."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 671,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_data_column_at_ratio(df, column_index):\n",
-    "    pass"
+    "def delete_random_data(df, ratio):\n",
+    "    '''\n",
+    "    retourne un nouveau dataframe avec les données supprimées (toutes les colonnes confondues) souhaité au ratio voulue.\n",
+    "    '''\n",
+    "    miss_df = df.isnull().sum()\n",
+    "    size = np.shape(df)[0]\n",
+    "    nb_data_already_missing = miss_df.sum()\n",
+    "\n",
+    "    # nombre de données manquantes hors déjà manquantes\n",
+    "    nb_data2delete = np.round(ratio*size - nb_data_already_missing, 1).astype(int)\n",
+    "\n",
+    "    # Passage du dataframe en dataframe 1 dimension\n",
+    "    flattened_df = df.values.flatten()\n",
+    "    temp_df = pd.DataFrame(flattened_df, columns=['temp'])\n",
+    "\n",
+    "    # indice des données déjà manquantes dans la liste \n",
+    "    already_nan = list(temp_df[temp_df.iloc[:, 0].isna()].index.values)\n",
+    "    \n",
+    "    # Suppression aléatoire\n",
+    "    temp = np.arange(np.shape(temp_df)[0]) # index from 0 to the nb of row of the dataframe\n",
+    "    temp2 = np.delete(temp, already_nan) # delete index where data is already nan\n",
+    "    np.random.shuffle(temp2) # shuffle to make a random\n",
+    "    index2delete = temp2[:nb_data2delete] # get random indexes to delete\n",
+    "    new_df = temp_df.copy() # deep copy \n",
+    "    for value in index2delete:\n",
+    "        new_df.iloc[value, 0] = np.nan # delete value\n",
+    "\n",
+    "    # reformatage en Dataframe\n",
+    "    flattened_df = new_df.values.flatten()\n",
+    "    array_reshaped = flattened_df.reshape(np.shape(df)[0], np.shape(df)[1])\n",
+    "    new_df = pd.DataFrame(array_reshaped, columns=df.columns)\n",
+    "    \n",
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 706,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Ratio du nombre de données manquantes pour chaque colonne\nmpg             0.057\ncylinders       0.032\ndisplacement    0.047\nhorsepower      0.047\nweight          0.049\nacceleration    0.062\nmodel year      0.049\norigin          0.032\ncar name        0.025\ndtype: float64 \n\nRatio du nombre de données manquantes totale\n0.4 \n\nNombre de données manquantes pour chaque colonne\nmpg             23\ncylinders       13\ndisplacement    19\nhorsepower      19\nweight          20\nacceleration    25\nmodel year      20\norigin          13\ncar name        10\ndtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemple d'utilisation \n",
+    "# on supprime des données de façon a perdre 40% des données\n",
+    "new_df2 = delete_random_data(df, 0.40)\n",
+    "\n",
+    "# on a bien un ratio de 0.40 de données manquantes\n",
+    "print('Ratio du nombre de données manquantes pour chaque colonne')\n",
+    "print(get_ratio_missing_data(new_df2), '\\n')\n",
+    "\n",
+    "print('Ratio du nombre de données manquantes totale')\n",
+    "print(get_ratio_missing_data(new_df2).sum(), '\\n')\n",
+    "\n",
+    "# on a supprimé au total 162 données.\n",
+    "print('Nombre de données manquantes pour chaque colonne')\n",
+    "print(get_number_missing_data(new_df2))"
    ]
   },
   {
    "source": [
-    "2. une seconde qui supprimera aléatoirement des données dans l’ensemble du da- taframe (n’importe quelle colonne peut donc être concernée) de façon à ce que le taux de valeurs manquantes, au total, devienne égal à une valeur fixée arbitrairement par l’utilisateur."
+    "## 3) Utilisation de méthodes avec suppression de données\n",
+    "\n",
+    "Dans cette partie, on propose de régler le problème des données manquantes en se limitant aux données disponibles, en réalisant soit une analyse des cas concrets, ou une analyse de cas disponibles.\n",
+    "Vous devrez donc écrire deux fonctions :\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "1. Analyse des cas concrets : la fonction prend en entrée le dataframe et ne renvoie que les lignes qui ne comportent pas de données manquantes."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "2. Analyse des données disponibles : la fonction prend en entrée le dataframe et un taux maximal, et renvoie une copie des données où les variables dont le taux de valeurs manquantes (cf. 2.1) dépassant ce taux ont été retirées."
    ],
    "cell_type": "markdown",
    "metadata": {}
