added drop na rows within df

--- a/Project/Missing-data.ipynb
+++ b/Project/Missing-data.ipynb
@@ -475,10 +475,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def analyse_cas_concret(df):\n",
+    "    return df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 720,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nombre de données manquantes totale\n14 \n\non a bien retiré les lignes où les données étaient manquantes\ndf initial - df cas concret: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Nombre de données manquantes totale')\n",
+    "print(get_number_missing_data(df).sum(), '\\n')\n",
+    "\n",
+    "new_df3 = analyse_cas_concret(df)\n",
+    "\n",
+    "print('on a bien retiré les lignes où les données étaient manquantes')\n",
+    "print('df initial - df cas concret:',df.shape[0] - new_df3.shape[0])"
+   ]
   },
   {
    "source": [
@@ -486,6 +512,16 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 711,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyse_data_disponible(df, ratio_max):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
