--- a/Project/Missing-data.ipynb
+++ b/Project/Missing-data.ipynb
@@ -475,24 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 795,
    "metadata": {},
    "outputs": [],
    "source": [
     "def analyse_cas_concret(df):\n",
-    "    return df.dropna()"
+    "    return df.dropna().reset_index(drop=True).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 720,
+   "execution_count": 796,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Nombre de données manquantes totale\n14 \n\non a bien retiré les lignes où les données étaient manquantes\ndf initial - df cas concret: 14\n"
+      "Nombre de données manquantes totale\n0 \n\non a bien retiré les lignes où les données étaient manquantes\ndf initial - df cas concret: 0\n"
      ]
     }
    ],
@@ -515,13 +515,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 853,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyse_data_disponible(df, ratio_max):\n",
-    "    pass"
+    "def analyse_data_disponible(df, ratio_max, verbose=False):\n",
+    "    if verbose:\n",
+    "        print('Delete column if nb of Nan > {}'.format(int(np.round(ratio_max*df.shape[0]))))\n",
+    "    return df.dropna(axis='columns', thresh=int(np.round(df.shape[0]-ratio_max*df.shape[0]))).copy()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 867,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nombre de données manquantes pour chaque colonne\nmpg             8\ncylinders       0\ndisplacement    0\nhorsepower      6\nweight          0\nacceleration    0\nmodel year      0\norigin          0\ncar name        0\ndtype: int64\ndf initial: (406, 9) \n\nAvec un seuil de 0.017 correspondant à 7 nan, on a bien supprimé 1 colonne (mpg) \n\nDelete column if nb of Nan > 7\ndf data disponible: (406, 8)\n['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model year', 'origin', 'car name']\nAvec un seuil de 0.017 correspondant à 7 nan, on a bien supprimé 2 colonnes (mpg et horsepower) \n\nDelete column if nb of Nan > 4\ndf data disponible: (406, 7)\n['cylinders', 'displacement', 'weight', 'acceleration', 'model year', 'origin', 'car name']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Nombre de données manquantes pour chaque colonne')\n",
+    "print(get_number_missing_data(df))\n",
+    "print('df initial:',df.shape, '\\n')\n",
+    "\n",
+    "print('Avec un seuil de 0.017 correspondant à 7 nan, on a bien supprimé 1 colonne (mpg)', '\\n')\n",
+    "new_df4 = analyse_data_disponible(df, 0.017, verbose=True)\n",
+    "print('df data disponible:', new_df4.shape)\n",
+    "print(list(new_df4.columns))\n",
+    "\n",
+    "print('Avec un seuil de 0.017 correspondant à 7 nan, on a bien supprimé 2 colonnes (mpg et horsepower)', '\\n')\n",
+    "new_df4 = analyse_data_disponible(df, 0.010, verbose=True)\n",
+    "print('df data disponible:', new_df4.shape)\n",
+    "print(list(new_df4.columns))"
+   ]
+  },
+  {
+   "source": [
+    "## Utilisation de méthodes avec imputation de données\n",
+    "Dans cette partie, on propose de régler le problème des données manquantes en les complétant en fixant leur valeur à l’aide d’une méthode d’imputation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 4.1.) Imputation univariée\n",
+    "Après avoir rappelé le principe et le fonctionnement d’une imputation univariée, utiliser la classe sklearn.impute.SimpleImputer pour compléter les données manquantes, en essayant différentes stratégies d’imputation.\n",
+    "Discuter de son intérêt, et de ses limitations potentielles."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### 4.2.) Imputation par la méthode des k plus proches voisins (kNN)\n",
+    "Il est possible de réaliser l’imputation en utilisant l’algorithme des k plus proches voisins.\n",
+    "La solution consiste, pour une instance présentant une (ou plusieurs) donnée(s) man- quante(s), à rechercher ses k plus proches voisins (au sens d’une métrique donnée). Ces derniers seront utilisés pour imputer les valeurs manquantes en effectuant une moyenne (éventuellement pondérée selon la distance) des variables concernées.\n",
+    "Nous utiliserons la classe sklearn.impute.KNNImputer qui permet de mettre en œuvre cette méthode d’imputation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "a) Expliquer le fonctionnement de la métrique par défaut utilisée par cette classe pour déterminer ses plus proches voisins."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "b) Réaliser l’imputation des données manquantes en utilisant cette classe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "c) Discuter de son intérêt et des limitations potentielles, en abordant notamment le cas de données manquantes de type MAR ou MNAR, et de la différence avec la méthode univariée."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### 4.3.) Imputation multivariée\n",
+    "Enfin, il est également possible de réaliser l’imputation des données manquantes en es- sayant de les prédire à partir des autres paramètres présents. C’est l’objet de l’imputation multivariée.\n",
+    "Pour ce faire, on utilisera pour chaque variable présentant des données manquantes un estimateur (qui sera donc un classifieur pour une variable qualitative, et un régresseur pour une variable quantitative) qui sera entraîné sur les autres variables.\n",
+    "La classe sklearn.impute.IterativeImputer permet de mettre en œuvre ce type d’imputation."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "source": [
+    "a) Expliquer succinctement le fonctionnement par défaut de cette classe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "b) Réaliser l’imputation des données manquantes en utilisant cette classe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "c) Discuter de son intérêt et des limitations potentielles, en abordant notamment le cas de données manquantes de type MAR ou MNAR, et de la différence avec les méthodes précédentes."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "## 5) Tâche de régression associée, évaluation des méthodes d’imputation\n",
+    "On cherche maintenant à prédire la variable mpg à l’aide d’une (ou plusieurs) variable(s) explica- tive(s). On utilisera la classe sklearn.linear_model.LinearRegression."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 5.1. Analyse de la matrice de corrélation\n",
+    "En travaillant sur les données initiales (sans données manquantes), calculer et afficher la matrice de corrélation :  \n",
+    "> import seaborn as sns  \n",
+    "> corrmat = data.corr()  \n",
+    "> sns.heatmap(corrmat,annot = True)    \n",
+    "\n",
+    "Déterminer la variable explicative la plus corrélée (notée X) à la variable à prédire (y)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### 5.2. Régression linéaire sur les données complètes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "a) Séparer les données en base d’apprentissage (70%) et de test."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "b) Déterminer les coefficients de la droite de régression (fonction fit) sur les données d’apprentissage."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "c) Effectuer les prédictions sur les données de test (fonction predict) et estimer les performances : RMSE (Root Mean Squared Error) et R2 (r2_score)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### 5.3. Régression linéaire sur les données manquantes après imputation\n",
+    "Répéter les expériences précédentes en considérant successivement 20% et 50% de données manquantes imputées.\n",
+    "Présenter les résultats sous forme d’un graphe comparatif que vous commenterez."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### 5.4. Pour finir...\n",
+    "Deux variables sont corrélées en valeur absolue... retournez au 5.1 pour vérifier la pertinence de votre choix.\n",
+    "Une corrélation linéaire peut être encore améliorée en transformant astucieusement les données : comment ?\n",
+    "En tenant compte de ces deux remarques, refaire les parties 5.2 et 5.3 si nécessaire. Une grossière erreur s’est glissée quelque part. La question est : où ? Expliquez."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
