--- a/Project/Missing-data.ipynb
+++ b/Project/Missing-data.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1093,
+   "execution_count": 1171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,10 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import timeit\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn import preprocessing"
    ]
   },
   {
@@ -700,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 1159,
    "metadata": {},
    "outputs": [
     {
@@ -713,20 +716,20 @@
    ],
    "source": [
     "# imputation par la moyenne (uniquement sur les données dont les variables aléatoires sont quantitatives)\n",
-    "new_df2_mean = set_df_data_types(new_df2.copy())\n",
+    "new_df2_mean = set_df_data_types(new_df2.copy()).select_dtypes([np.number])\n",
     "\n",
     "print('--- Imputation par la moyenne ---')\n",
-    "df_imputation_mean = pd.DataFrame(SimpleImputer(missing_values=np.nan, strategy='mean').fit_transform(new_df2_mean.select_dtypes([np.number])), columns=new_df2_mean.select_dtypes([np.number]).columns.values.tolist())\n",
+    "df_imputation_mean = pd.DataFrame(SimpleImputer(missing_values=np.nan, strategy='mean').fit_transform(new_df2_mean), columns=new_df2_mean.columns.values.tolist())\n",
     "print('Nombre de données manquantes pour chaque colonne:')\n",
     "print(get_number_missing_data(df_imputation_mean), '\\n')\n",
     "print('Données imputées aux index des données manquantes:')\n",
-    "[print('['+new_df2_mean.select_dtypes([np.number]).columns.values.tolist()[i]+' index]') or print(df_imputation_mean.iloc[get_missing_data_indexes_at_column(new_df2_mean.select_dtypes([np.number]), i), i], '\\n') for i in range(new_df2_mean.select_dtypes([np.number]).shape[1])]\n",
+    "[print('['+new_df2_mean.columns.values.tolist()[i]+' index]') or print(df_imputation_mean.iloc[get_missing_data_indexes_at_column(new_df2_mean, i), i], '\\n') for i in range(new_df2_mean.shape[1])]\n",
     "print('---------------------------------------', '\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": 1158,
    "metadata": {},
    "outputs": [
     {
@@ -739,14 +742,14 @@
    ],
    "source": [
     "# imputation par la mediane (uniquement sur les données dont les variables aléatoires sont quantitatives)\n",
-    "new_df2_median = set_df_data_types(new_df2.copy())\n",
+    "new_df2_median = set_df_data_types(new_df2.copy()).select_dtypes([np.number])\n",
     "\n",
     "print('--- Imputation par la mediane ---')\n",
-    "df_imputation_median = pd.DataFrame(SimpleImputer(missing_values=np.nan, strategy='median').fit_transform(new_df2_median.select_dtypes([np.number])), columns=new_df2_median.select_dtypes([np.number]).columns.values.tolist())\n",
+    "df_imputation_median = pd.DataFrame(SimpleImputer(missing_values=np.nan, strategy='median').fit_transform(new_df2_median), columns=new_df2_median.columns.values.tolist())\n",
     "print('Nombre de données manquantes pour chaque colonne:')\n",
     "print(get_number_missing_data(df_imputation_median), '\\n')\n",
     "print('Données imputées aux index des données manquantes:')\n",
-    "[print('['+new_df2_median.select_dtypes([np.number]).columns.values.tolist()[i]+' index]') or print(df_imputation_median.iloc[get_missing_data_indexes_at_column(new_df2_median.select_dtypes([np.number]), i), i], '\\n') for i in range(new_df2_median.select_dtypes([np.number]).shape[1])]\n",
+    "[print('['+new_df2_median.columns.values.tolist()[i]+' index]') or print(df_imputation_median.iloc[get_missing_data_indexes_at_column(new_df2_median, i), i], '\\n') for i in range(new_df2_median.shape[1])]\n",
     "print('---------------------------------------', '\\n\\n')"
    ]
   },
@@ -819,8 +822,8 @@
   {
    "source": [
     "### 4.2.) Imputation par la méthode des k plus proches voisins (kNN)\n",
-    "Il est possible de réaliser l’imputation en utilisant l’algorithme des k plus proches voisins.\n",
-    "La solution consiste, pour une instance présentant une (ou plusieurs) donnée(s) man- quante(s), à rechercher ses k plus proches voisins (au sens d’une métrique donnée). Ces derniers seront utilisés pour imputer les valeurs manquantes en effectuant une moyenne (éventuellement pondérée selon la distance) des variables concernées.\n",
+    "Il est possible de réaliser l’imputation en utilisant l’algorithme des k plus proches voisins.  \n",
+    "La solution consiste, pour une instance présentant une (ou plusieurs) donnée(s) manquante(s), à rechercher ses k plus proches voisins (au sens d’une métrique donnée). Ces derniers seront utilisés pour imputer les valeurs manquantes en effectuant une moyenne (éventuellement pondérée selon la distance) des variables concernées.  \n",
     "Nous utiliserons la classe sklearn.impute.KNNImputer qui permet de mettre en œuvre cette méthode d’imputation."
    ],
    "cell_type": "markdown",
@@ -834,11 +837,32 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Fonctionnement de la métrique par défaut: nan_euclidiant**   \n",
+    "Utilisation de l'algortihme K-nn en utilisant la distance euclidienne et en choisissant le nombre de voisins voulu.  \n",
+    "1. L'algorithme K-nn appliqué à l'imputation des données pour un exemple (une ligne du dataframe possedant 1 manquant par exemple) va sélectionner les n plus proches voisins que nous définirons grâce à la distance euclidienne.  \n",
+    "2. Il va ensuite pouvoir imputer la donnée manquante en calculant la moyenne pondérée ou non pondérée des voisins. \n",
+    "\n",
+    "Par exemple nous avons :  \n",
+    "    \\[1   2   3\\],  \n",
+    "    \\[NaN 5   -1\\],  \n",
+    "    \\[9   7   12\\],  \n",
+    "    \\[3   5   -2\\],  \n",
+    "\n",
+    "En utilisant l'algorithme K-nn avec la distance euclidienne, les moyennes pondérées et un nombre de voisin égal à 2:  \n",
+    "Nous allons comparer 2 voisins :  \n",
+    "**\\[1   2   7\\]**  et  **\\[3   5   -2\\]** car ils ont une distance euclidienne la plus faible par rapport à  **\\[NaN 5   -1\\]**  \n",
+    "\n",
+    "=> De ce fait, **NaN** va pouvoir être remplacé par : **(1*3)/2 = 1.5**\n",
+    "\n",
+    "Nous obtenons ainsi notre dataframe **imputé par K-nn**:  \n",
+    "    \\[1   2   3\\],  \n",
+    "    \\[1.5 5   -1\\],  \n",
+    "    \\[9   7   12\\],  \n",
+    "    \\[3   5   -2\\],  "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -849,10 +873,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1211,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nombre de données manquantes pour chaque colonne:\nmpg             25\ncylinders       12\ndisplacement    23\nhorsepower      24\nweight          11\nacceleration    17\nmodel year      17\norigin          15\ncar name        18\ndtype: int64 \n\nIndex des données manquantes:\n[mpg index] [10, 11, 12, 13, 14, 17, 25, 39, 70, 100, 120, 137, 143, 182, 197, 213, 237, 288, 297, 301, 329, 367, 377, 385, 387]\n[cylinders index] [22, 35, 38, 50, 76, 106, 248, 258, 265, 278, 303, 334]\n[displacement index] [15, 24, 36, 42, 46, 52, 76, 84, 94, 119, 156, 158, 160, 191, 216, 235, 249, 273, 296, 364, 367, 392, 402]\n[horsepower index] [5, 19, 27, 38, 51, 59, 64, 68, 76, 87, 106, 133, 156, 212, 220, 301, 311, 337, 343, 361, 375, 382, 393, 401]\n[weight index] [18, 62, 82, 99, 104, 121, 157, 201, 253, 325, 386]\n[acceleration index] [19, 34, 46, 121, 132, 133, 164, 184, 189, 203, 209, 271, 314, 326, 339, 349, 403]\n[model year index] [89, 114, 132, 204, 210, 221, 233, 237, 249, 257, 273, 274, 277, 294, 326, 353, 398]\n[origin index] [48, 106, 112, 115, 128, 174, 191, 210, 248, 286, 320, 361, 366, 382, 405]\n[car name index] [16, 63, 66, 71, 77, 82, 90, 113, 116, 125, 158, 182, 184, 188, 190, 256, 263, 375]\n\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Nombre de données manquantes pour chaque colonne:')\n",
+    "print(get_number_missing_data(new_df2), '\\n')\n",
+    "print('Index des données manquantes:')\n",
+    "\n",
+    "[print('['+new_df2.columns[i]+' index]', get_missing_data_indexes_at_column(new_df2, i)) for i in range(new_df2.shape[1])]\n",
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1213,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "        mpg  displacement  horsepower    weight  acceleration  cylinders  \\\n0  0.252809      0.617571    0.456522  0.536150      0.238095        0.8   \n1  0.168539      0.728682    0.646739  0.589736      0.208333        0.8   \n2  0.252809      0.645995    0.565217  0.516870      0.178571        0.8   \n3  0.196629      0.609819    0.565217  0.516019      0.238095        0.8   \n4  0.224719      0.604651    0.510870  0.520556      0.148810        0.8   \n\n   model year  origin  car name  \n0         0.0     0.0  0.162252  \n1         0.0     0.0  0.122517  \n2         0.0     0.0  0.758278  \n3         0.0     0.0  0.046358  \n4         0.0     0.0  0.529801   \n\nNombre de données manquantes pour chaque colonne:\nmpg             0\ndisplacement    0\nhorsepower      0\nweight          0\nacceleration    0\ncylinders       0\nmodel year      0\norigin          0\ncar name        0\ndtype: int64 \n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imputation des données manquantes par l'algorithme K-nn \n",
+    "# => Uniquement sur les données dont les valeurs sont numériques\n",
+    "\n",
+    "# Encodage des variables qualitatives en encodage numerique\n",
+    "df2_qualitative = new_df2.copy()[['cylinders', 'model year', 'origin', 'car name']]\n",
+    "original = df2_qualitative\n",
+    "mask = df2_qualitative.isnull()\n",
+    "df2_qualitative = df2_qualitative.astype(str).apply(preprocessing.LabelEncoder().fit_transform)\n",
+    "df2_qualitative.where(~mask, original)\n",
+    "\n",
+    "# Rassemblement des deux dataframes\n",
+    "df2_quantitative = set_df_data_types(new_df2.copy()).drop(['cylinders', 'model year', 'origin', 'car name'], axis=1)\n",
+    "df2_knn = pd.concat([df2_quantitative, df2_qualitative], axis=1)\n",
+    "\n",
+    "# L'algorthme K-nn est très sensible par rapport à la distance entre nos données\n",
+    "# Normalisation des données \n",
+    "df2_knn = pd.DataFrame(preprocessing.MinMaxScaler().fit_transform(df2_knn), columns=df2_knn.columns)\n",
+    "print(df2_knn.head(), '\\n')\n",
+    "\n",
+    "# Imputation des données manquantes par Knn\n",
+    "df2_knn_imputed = pd.DataFrame(KNNImputer(missing_values=np.nan, n_neighbors=2, weights=\"uniform\").fit_transform(df2_knn), columns=df2_knn.columns)\n",
+    "\n",
+    "# Verification des données imputées\n",
+    "print('Nombre de données manquantes pour chaque colonne:')\n",
+    "print(get_number_missing_data(df2_knn_imputed), '\\n')"
+   ]
   },
   {
    "source": [
@@ -862,11 +942,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Interet:** Utiliser l'imputation par l'algorithme des k plus proches voisins permet d'imputer des données en tenant compte des autres variables/features pour chaque exemple de l'échantillon.  \n",
+    "\n",
+    "**Inconveniant:** La mise en place du knn a besoin de données numériques afin de pouvoir comparer les distances entre différentes valeurs. C'est pourquoi pour les données qualitatives, une solution serait de les encoder au préalable et de les avoir au format numérique.  \n",
+    "D'autres part, l'algorthme des K plus proches voisins est sensible à la distance entre les données, de ce fait il est nécessaire ici de normaliser les données au préalable.  \n",
+    "De ce fait, les données quantitatives et qualitatives encodées vont prendre des valeurs entre 0 et 1 et cela signifie également que les données qualitatives de même label vont se situer à la même valeur d'encodage normalisée. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
